# base_python_template

./: cookiecutter.json
{{cookiecutter.project_slug}}/: pyproject.toml  run_once.sh  setup.cfg
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  pyproject.toml  run_once.sh  setup.cfg  {{cookiecutter.file}}.sh
